feat: create speed control for it-speaks demo

--- a/apps/frontend/src/styles.css
+++ b/apps/frontend/src/styles.css
@@ -2,7 +2,7 @@
 @plugin 'daisyui';
 
 /* synced-sources:start */
-@source "../../../libs/it-speaks";
+@source '../../../libs/it-speaks';
 /* synced-sources:end */
 
 @layer base {
